2004-06-15  Dick Porter  <dick@ximian.com>

	* configure.in: Check for struct ip_mreqn and struct ip_mreq on
	windows too.  Fixes bug 55040.

Mon Jun 14 18:38:34 CEST 2004 Paolo Molaro <lupus@ximian.com>

	* configure.in: better explain that --with-nptl is not related to
	NPTL, but to __thread support. Set sigaltstack support to off by
	default.

2004-06-12  Raja R Harinath  <harinath@acm.org>

	* Makefile.am (populate-runtime-subdir): Add _tmpinst directory
	to the PATH.

2004-06-11  Jackson Harper  <jackson@ximian.com>

	* runtime/net_2_0/Makefile.am:
	* runtime/net_1_1/Makefile.am: Remove signing patches
	
2004-06-11  Jackson Harper  <jackson@ximian.com>

	* man/mono.1: Add documentation for MONO_GAC_PREFIX.
	* runtime/net_2_0/Makefile.am: 
	* runtime/net_1_1/Makefile.am: Sign assemblies before
	installing. Do not sign ziplib, npgsql, or nunit assemblies. Sign mscorlib.
	
2004-06-11  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (populate-runtime-subdir): New target.  Does a
	controlled "make install" in the 'mcs/' directory to populate the
	'runtime' directory.
	(fasterstrap): Use it.

2004-06-10  Raja R Harinath  <rharinath@novell.com>

	* runtime/Makefile.am ($(monoone_DATA),$(monotwo_DATA),$(monobins_DATA)):
	Don't copy from prefix.  Use $(LN_S) to point to the mcs/ tree.
	* runtime/net_1_1/Makefile.am (mscorlib.dll,$(gac_assemblies)): 
	Use $(LN_S) to point to the mcs/ tree, rather than copying.
	* runtime/net_2_0/Makefile.am (mscorlib.dll,$(gac_assemblies)): Likewise.

2004-06-10  Raja R Harinath  <rharinath@novell.com>	

	Support the new assembly signing setup in mcs/.
	* Makefile.am (mcs-do-basic-build): Pass 'USE_BOOT_COMPILE' to sub-makes.
	($(tmpinst)/etc/mono/machine.config): New target.
	(tmpinst-dir.stamp): Remove and rewrite into ...
	($(tmpinst)/bin/mcs): ... this and ...
	($(tmpinst)/bin/mono): ... this.  Update to use the in-tree machine.config.
	(tmpinst-dir): Rewrite to invoke above $(tmpinst)/... targets directly.